--- a/src/main/resources/META-INF/assets/css/SearchTimerView.css
+++ b/src/main/resources/META-INF/assets/css/SearchTimerView.css
@@ -12,3 +12,32 @@
 	width: 20px;
 	height: 20px;
 }
+
+.editicon {
+	width: 20px;
+	height: 20px;
+}
+
+.border {
+	border: 1px solid;
+	border-color: LightGrey;
+}
+
+fieldset.scheduler-border {
+    border: 1px groove #ddd !important;
+    padding: 0 1.4em 1.4em 1.4em !important;
+    margin: 0 0 1.5em 0 !important;
+}
+
+legend.scheduler-border {
+    width:inherit; 
+    padding: 0 10px;
+    border-bottom:none;
+	font-size: 1em;
+	font-weight: bold;	    
+}
+
+legend {
+	margin-bottom: 0;
+}
+
